service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
  labels:
    app: wil-playground
spec:
  selector:
    app: wil-playground
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
